# devcanvas-v2

./: .env.example  .gitignore  README.md  build_docker_images.sh  build_production_images.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json
.github/workflows/: build_prod_devcanvas.yml  store_prod_compose.yml
ai-service/: Dockerfile.dev  Dockerfile.prod  README.md  mock_user_data.json  pyproject.toml
ai-service/app/: main.py  models.py  schemas.py  settings.py
ai-service/app/dependencies/: database.py  jwt.py  user.py
ai-service/app/routers/: agent.py
ai-service/app/services/: agent.py  auth.py  database.py  user.py
devcanvas-api/: Dockerfile  Dockerfile.dev  Dockerfile.prod  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh  nodemon.json  package.json  tsconfig.json
devcanvas-api/prisma/: schema.prisma
devcanvas-api/src/: index.ts
devcanvas-api/src/controllers/: authContoller.ts  educationsController.ts  experiencesController.ts  portfoliosController.ts  projectsController.ts  usersController.ts
devcanvas-api/src/metrics/: index.ts
devcanvas-api/src/middlewares/: authMiddleware.ts  uploadMiddleware.ts
devcanvas-bun-api/: package.json
devcanvas-bun-api/prisma/: schema.prisma
devcanvas-bun-api/src/: app.ts  index.ts
devcanvas-frontend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  nginx.conf  package.json
devcanvas-frontend/public/: index.html  manifest.json
devcanvas-frontend/src/: App.js  api.js  index.js  pythonApi.js
nginx/: Dockerfile  nginx-prod.conf
traefik/: traefik.toml
(+64 files in other folders)
